Quorum/Library/Tests/TypeCheckerGenerated/Pass/RetAssignTextObjTextObj.quorum
class Main
    action Main
        Text v
        v:SetValue(Test())
        if v:GetValue() = "text"
            output "passed"
        end
    end

    action Test() returns Text
        Text var
        var:SetValue("text")
        return var
    end
end